Added the site author

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Andre Leiradella
 description: Generalist Programmer
+author: Andre Leiradella
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
